gen/DataCleanerParser.py
# Generated from D:/University/Semester-8/Compiler/Final_Project/data_cleaner_dsl/grammar/DataCleaner.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DataCleanerParser ( Parser ):

    grammarFileName = "DataCleaner.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'load'", "'remove_rows_missing'", "'fill_missing'", 
                     "'with'", "'normalize'", "'to_range('", "','", "')'", 
                     "'standardize'", "'log_transform'", "'auto_categorize'", 
                     "'n_clusters='", "'split_data'", "'train='", "'validate='", 
                     "'test='", "'remove_duplicates'", "'drop_row'", "'from'", 
                     "'to'", "'exclude'", "'drop_column'", "'integrate'", 
                     "'in'", "'encode'", "'all'", "'delete_outliers'", "'mean'", 
                     "'median'", "'mode'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "NUMBER", 
                      "STRING", "WS", "NEWLINE", "COMMENT" ]

    RULE_start = 0
    RULE_program = 1
    RULE_statement = 2
    RULE_loadStatement = 3
    RULE_removeRowsMissingStatement = 4
    RULE_fillMissingStatement = 5
    RULE_normalizeStatement = 6
    RULE_standardizeStatement = 7
    RULE_logTransformStatement = 8
    RULE_autoCategorizeStatement = 9
    RULE_splitDataStatement = 10
    RULE_removeDuplicateStatement = 11
    RULE_dropRowStatement = 12
    RULE_dropColumnStatement = 13
    RULE_integrateInconsistentData = 14
    RULE_encodingStatement = 15
    RULE_handleOutliersStatement = 16
    RULE_excludeColumnsStatement = 17
    RULE_path = 18
    RULE_min_val = 19
    RULE_max_val = 20
    RULE_column = 21
    RULE_option = 22
    RULE_row = 23
    RULE_method = 24
    RULE_number = 25
    RULE_fillMethod = 26

    ruleNames =  [ "start", "program", "statement", "loadStatement", "removeRowsMissingStatement", 
                   "fillMissingStatement", "normalizeStatement", "standardizeStatement", 
                   "logTransformStatement", "autoCategorizeStatement", "splitDataStatement", 
                   "removeDuplicateStatement", "dropRowStatement", "dropColumnStatement", 
                   "integrateInconsistentData", "encodingStatement", "handleOutliersStatement", 
                   "excludeColumnsStatement", "path", "min_val", "max_val", 
                   "column", "option", "row", "method", "number", "fillMethod" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    ID=31
    NUMBER=32
    STRING=33
    WS=34
    NEWLINE=35
    COMMENT=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(DataCleanerParser.ProgramContext,0)


        def EOF(self):
            return self.getToken(DataCleanerParser.EOF, 0)

        def getRuleIndex(self):
            return DataCleanerParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = DataCleanerParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.program()
            self.state = 55
            self.match(DataCleanerParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def loadStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.LoadStatementContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataCleanerParser.StatementContext)
            else:
                return self.getTypedRuleContext(DataCleanerParser.StatementContext,i)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DataCleanerParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.loadStatement()
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 181284396) != 0):
                self.state = 58
                self.statement()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def removeRowsMissingStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.RemoveRowsMissingStatementContext,0)


        def fillMissingStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.FillMissingStatementContext,0)


        def normalizeStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.NormalizeStatementContext,0)


        def standardizeStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.StandardizeStatementContext,0)


        def logTransformStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.LogTransformStatementContext,0)


        def autoCategorizeStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.AutoCategorizeStatementContext,0)


        def splitDataStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.SplitDataStatementContext,0)


        def removeDuplicateStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.RemoveDuplicateStatementContext,0)


        def dropRowStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.DropRowStatementContext,0)


        def dropColumnStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.DropColumnStatementContext,0)


        def integrateInconsistentData(self):
            return self.getTypedRuleContext(DataCleanerParser.IntegrateInconsistentDataContext,0)


        def encodingStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.EncodingStatementContext,0)


        def handleOutliersStatement(self):
            return self.getTypedRuleContext(DataCleanerParser.HandleOutliersStatementContext,0)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DataCleanerParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.removeRowsMissingStatement()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.fillMissingStatement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.normalizeStatement()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.standardizeStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.logTransformStatement()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 6)
                self.state = 69
                self.autoCategorizeStatement()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 7)
                self.state = 70
                self.splitDataStatement()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 8)
                self.state = 71
                self.removeDuplicateStatement()
                pass
            elif token in [18, 19]:
                self.enterOuterAlt(localctx, 9)
                self.state = 72
                self.dropRowStatement()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 10)
                self.state = 73
                self.dropColumnStatement()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 11)
                self.state = 74
                self.integrateInconsistentData()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 12)
                self.state = 75
                self.encodingStatement()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 13)
                self.state = 76
                self.handleOutliersStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoadStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def path(self):
            return self.getTypedRuleContext(DataCleanerParser.PathContext,0)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_loadStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoadStatement" ):
                listener.enterLoadStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoadStatement" ):
                listener.exitLoadStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoadStatement" ):
                return visitor.visitLoadStatement(self)
            else:
                return visitor.visitChildren(self)




    def loadStatement(self):

        localctx = DataCleanerParser.LoadStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_loadStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(DataCleanerParser.T__0)
            self.state = 80
            self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RemoveRowsMissingStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(DataCleanerParser.ColumnContext,0)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_removeRowsMissingStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRemoveRowsMissingStatement" ):
                listener.enterRemoveRowsMissingStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRemoveRowsMissingStatement" ):
                listener.exitRemoveRowsMissingStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRemoveRowsMissingStatement" ):
                return visitor.visitRemoveRowsMissingStatement(self)
            else:
                return visitor.visitChildren(self)




    def removeRowsMissingStatement(self):

        localctx = DataCleanerParser.RemoveRowsMissingStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_removeRowsMissingStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(DataCleanerParser.T__1)
            self.state = 83
            self.column()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FillMissingStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(DataCleanerParser.ColumnContext,0)


        def fillMethod(self):
            return self.getTypedRuleContext(DataCleanerParser.FillMethodContext,0)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_fillMissingStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFillMissingStatement" ):
                listener.enterFillMissingStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFillMissingStatement" ):
                listener.exitFillMissingStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFillMissingStatement" ):
                return visitor.visitFillMissingStatement(self)
            else:
                return visitor.visitChildren(self)




    def fillMissingStatement(self):

        localctx = DataCleanerParser.FillMissingStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fillMissingStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(DataCleanerParser.T__2)
            self.state = 86
            self.column()
            self.state = 87
            self.match(DataCleanerParser.T__3)
            self.state = 88
            self.fillMethod()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NormalizeStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(DataCleanerParser.ColumnContext,0)


        def min_val(self):
            return self.getTypedRuleContext(DataCleanerParser.Min_valContext,0)


        def max_val(self):
            return self.getTypedRuleContext(DataCleanerParser.Max_valContext,0)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_normalizeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNormalizeStatement" ):
                listener.enterNormalizeStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNormalizeStatement" ):
                listener.exitNormalizeStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNormalizeStatement" ):
                return visitor.visitNormalizeStatement(self)
            else:
                return visitor.visitChildren(self)




    def normalizeStatement(self):

        localctx = DataCleanerParser.NormalizeStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_normalizeStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(DataCleanerParser.T__4)
            self.state = 91
            self.column()
            self.state = 92
            self.match(DataCleanerParser.T__5)
            self.state = 93
            self.min_val()
            self.state = 94
            self.match(DataCleanerParser.T__6)
            self.state = 95
            self.max_val()
            self.state = 96
            self.match(DataCleanerParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StandardizeStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(DataCleanerParser.ColumnContext,0)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_standardizeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStandardizeStatement" ):
                listener.enterStandardizeStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStandardizeStatement" ):
                listener.exitStandardizeStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStandardizeStatement" ):
                return visitor.visitStandardizeStatement(self)
            else:
                return visitor.visitChildren(self)




    def standardizeStatement(self):

        localctx = DataCleanerParser.StandardizeStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_standardizeStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(DataCleanerParser.T__8)
            self.state = 99
            self.column()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogTransformStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(DataCleanerParser.ColumnContext,0)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_logTransformStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogTransformStatement" ):
                listener.enterLogTransformStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogTransformStatement" ):
                listener.exitLogTransformStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogTransformStatement" ):
                return visitor.visitLogTransformStatement(self)
            else:
                return visitor.visitChildren(self)




    def logTransformStatement(self):

        localctx = DataCleanerParser.LogTransformStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_logTransformStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(DataCleanerParser.T__9)
            self.state = 102
            self.column()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutoCategorizeStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self):
            return self.getTypedRuleContext(DataCleanerParser.ColumnContext,0)


        def number(self):
            return self.getTypedRuleContext(DataCleanerParser.NumberContext,0)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_autoCategorizeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAutoCategorizeStatement" ):
                listener.enterAutoCategorizeStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAutoCategorizeStatement" ):
                listener.exitAutoCategorizeStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAutoCategorizeStatement" ):
                return visitor.visitAutoCategorizeStatement(self)
            else:
                return visitor.visitChildren(self)




    def autoCategorizeStatement(self):

        localctx = DataCleanerParser.AutoCategorizeStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_autoCategorizeStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(DataCleanerParser.T__10)
            self.state = 105
            self.column()
            self.state = 106
            self.match(DataCleanerParser.T__11)
            self.state = 107
            self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SplitDataStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataCleanerParser.NumberContext)
            else:
                return self.getTypedRuleContext(DataCleanerParser.NumberContext,i)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_splitDataStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSplitDataStatement" ):
                listener.enterSplitDataStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSplitDataStatement" ):
                listener.exitSplitDataStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSplitDataStatement" ):
                return visitor.visitSplitDataStatement(self)
            else:
                return visitor.visitChildren(self)




    def splitDataStatement(self):

        localctx = DataCleanerParser.SplitDataStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_splitDataStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(DataCleanerParser.T__12)
            self.state = 110
            self.match(DataCleanerParser.T__13)
            self.state = 111
            self.number()
            self.state = 112
            self.match(DataCleanerParser.T__6)
            self.state = 113
            self.match(DataCleanerParser.T__14)
            self.state = 114
            self.number()
            self.state = 115
            self.match(DataCleanerParser.T__6)
            self.state = 116
            self.match(DataCleanerParser.T__15)
            self.state = 117
            self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RemoveDuplicateStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataCleanerParser.RULE_removeDuplicateStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRemoveDuplicateStatement" ):
                listener.enterRemoveDuplicateStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRemoveDuplicateStatement" ):
                listener.exitRemoveDuplicateStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRemoveDuplicateStatement" ):
                return visitor.visitRemoveDuplicateStatement(self)
            else:
                return visitor.visitChildren(self)




    def removeDuplicateStatement(self):

        localctx = DataCleanerParser.RemoveDuplicateStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_removeDuplicateStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(DataCleanerParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DropRowStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def row(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataCleanerParser.RowContext)
            else:
                return self.getTypedRuleContext(DataCleanerParser.RowContext,i)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_dropRowStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDropRowStatement" ):
                listener.enterDropRowStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDropRowStatement" ):
                listener.exitDropRowStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDropRowStatement" ):
                return visitor.visitDropRowStatement(self)
            else:
                return visitor.visitChildren(self)




    def dropRowStatement(self):

        localctx = DataCleanerParser.DropRowStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_dropRowStatement)
        self._la = 0 # Token type
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(DataCleanerParser.T__17)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==32:
                    self.state = 122
                    self.row()
                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(DataCleanerParser.T__18)
                self.state = 129
                self.row()
                self.state = 130
                self.match(DataCleanerParser.T__19)
                self.state = 131
                self.row()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 132
                    self.match(DataCleanerParser.T__20)
                    self.state = 134 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 133
                        self.row()
                        self.state = 136 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==32):
                            break



                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DropColumnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataCleanerParser.ColumnContext)
            else:
                return self.getTypedRuleContext(DataCleanerParser.ColumnContext,i)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_dropColumnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDropColumnStatement" ):
                listener.enterDropColumnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDropColumnStatement" ):
                listener.exitDropColumnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDropColumnStatement" ):
                return visitor.visitDropColumnStatement(self)
            else:
                return visitor.visitChildren(self)




    def dropColumnStatement(self):

        localctx = DataCleanerParser.DropColumnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_dropColumnStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(DataCleanerParser.T__21)
            self.state = 144 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 143
                self.column()
                self.state = 146 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==31):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegrateInconsistentDataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataCleanerParser.OptionContext)
            else:
                return self.getTypedRuleContext(DataCleanerParser.OptionContext,i)


        def column(self):
            return self.getTypedRuleContext(DataCleanerParser.ColumnContext,0)


        def getRuleIndex(self):
            return DataCleanerParser.RULE_integrateInconsistentData

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegrateInconsistentData" ):
                listener.enterIntegrateInconsistentData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegrateInconsistentData" ):
                listener.exitIntegrateInconsistentData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntegrateInconsistentData" ):
                return visitor.visitIntegrateInconsistentData(self)
            else:
                return visitor.visitChildren(self)




    def integrateInconsistentData(self):
